disable blur on safari because of low performance and other bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,4 +13,10 @@
   .webkit-tap-transparent {
     -webkit-tap-highlight-color: transparent;
   }
+
+  @supports (-webkit-hyphens: none) {
+    .safari-hidden {
+      display: none;
+    }
+  }
 }
